# oxen-libquic

./: .clang-format  .drone.jsonnet  .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  liboxenquic.pc.in  readme.md  rebuild.sh
cmake/: StaticBuild.cmake  add_static_target.cmake  build_external.cmake  check_for_std_filesystem.cmake  check_submodule.cmake  combine_archives.cmake  ngtcp2_lib.cmake  system_or_submodule.cmake
debian/: changelog  control  control.in  copyright  gen-liboxen-quic-install.sh  liboxen-quic-dev.install  liboxen-quic.install.in  liboxen-quic1.0.install  not-installed  rules  update-lib-version.sh
debian/patches/: 0001-Remove-fmt-and-oxen-logging-from-headers.patch  0001-old-cmake-install-compat.patch  0002-Fix-libevent-linker-issue.patch  0003-Move-gnutls_rnd-call-out-of-header.patch  0005-Downgrade-warning-firing-on-connection-timeouts.patch  series
docs/: readme.md
include/: quic.hpp
include/oxen/: quic.hpp
include/oxen/quic/: address.hpp  btstream.hpp  connection.hpp  connection_ids.hpp  context.hpp  datagram.hpp  endpoint.hpp  error.hpp  format.hpp  formattable.hpp  gnutls_crypto.hpp  iochannel.hpp  ip.hpp  loop.hpp  messages.hpp  network.hpp  opt.hpp  stream.hpp  types.hpp  udp.hpp  utils.hpp  version.hpp  version.hpp.in
include/quic/: address.hpp  btstream.hpp  client.hpp  connection.hpp  connection_ids.hpp  context.hpp  crypto.hpp  datagram.hpp  endpoint.hpp  error.hpp  export.h  format.hpp  gnutls_crypto.hpp  handler.hpp  messages.hpp  network.hpp  opt.hpp  parser.hpp  server.hpp  stream.hpp  tunnel.hpp  types.hpp  udp.hpp  utils.hpp  zmq_bridge.hpp
src/: CMakeLists.txt  address.cpp  btstream.cpp  client.cpp  connection.cpp  connection_ids.cpp  context.cpp  crypto.cpp  datagram.cpp  endpoint.cpp  error.cpp  format.cpp  gnutls_creds.cpp  gnutls_crypto.cpp  gnutls_session.cpp  handler.cpp  internal.hpp  iochannel.cpp  ip.cpp  loop.cpp  messages.cpp  network.cpp  opt.cpp  server.cpp  stream.cpp  tunnel.cpp  udp.cpp  utils.cpp  version.cpp.in
tests/: 001-dtls_send_simple.cpp  001-handshake.cpp  002-send-receive.cpp  003-multiclient.cpp  004-stream-pending.cpp  004-streams.cpp  005-chunked-sender.cpp  006-server-send.cpp  007-datagrams.cpp  007-server-streams.cpp  008-close.cpp  008-conn_hooks.cpp  008-ed-keys.cpp  009-alpns.cpp  009-close.cpp  010-alpns.cpp  010-migration.cpp  CMakeLists.txt  dgram-speed-client.cpp  dgram-speed-server.cpp  main.cpp  oneshot_echo.cpp  oneshot_echo_nullcert.cpp  speedtest-client.cpp  speedtest-server.cpp  tcp_connect.cpp  tcp_listen.cpp  test_client.cpp  test_multiclient.cpp  test_server.cpp  utils.cpp  utils.hpp
utils/: format.sh  gen-certs.sh
utils/ci/: drone-gdb.sh  gdb-filter.py  lint-check.sh
